# rules_prisma

prisma/internal/: BUILD.bazel
