load("@aspect_rules_js//js:defs.bzl", "js_binary")

# This binary (prisma_wrapper.js) wraps prisma in a bazel
js_binary(
    name = "prisma_wrapper",
    data = [
        "//:node_modules/@prisma/client",
        "//:node_modules/@prisma/engines",
        "//:node_modules/prisma",
    ],
    entry_point = ":prisma_wrapper.js",
    visibility = ["//visibility:public"],
)
